Change the doctor's model for solve a code smell